Quinto Commit do HTML

--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@ Sirva quente, com sal e pimenta adicionais, se necessário.</li>
 
 </div>
 
+<hr>
+
+
+<div>
+<h2>Informações nutricionais</h2>
+
+<p>A tabela abaixo mostra os valores nutricionais por porção sem os recheios adicionais.</p>
+
+<table>
+<tr>
+<th>Calorias</th>
+<td>277kcal</td>
+
+
+
+
+
+</tr>
+</table>
+
+
+
+
+
+
+</div>
+
     </div>
 
 </body>
