--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receita de Omelete</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+ <title>Receita de Omelete</title>
 </head>
 <body>
     <div>
@@ -72,12 +76,23 @@ Sirva quente, com sal e pimenta adicionais, se necessário.</li>
 <tr>
 <th>Calorias</th>
 <td>277kcal</td>
-
-
-
-
-
 </tr>
+
+<tr>
+<th>Carboidratos</th>
+<td>0g</td>
+</tr>
+
+<tr>
+<th>Proteína</th>
+<td>20g</td>
+</tr>
+
+<tr>
+<td>Gordura</td>
+<td>22g</td>
+</tr>
+
 </table>
 
 
