--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Receita de Omelete Simples</h1>
         <p>Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos cozidos à perfeição, opcionalmente recheados com sua escolha de queijo, legumes ou carnes.</p>
 
-        <div>
+        <div class ="Tempo">
 <h2>Tempo de preparo</h2>
 
 <ul>
@@ -28,7 +28,7 @@
 
         </div>
 
-<div>
+<div class="Ingredientes">
     <h2>Ingredientes:</h2>
     <ul>
 <li>2-3 ovos grandes</li>
@@ -41,7 +41,7 @@
 
 <hr>
 
-<div>
+<div class="Modo">
 <h2>Modo de preparo</h2>
 <ol>
 <li><strong> Bata os ovos:</strong>
@@ -67,7 +67,7 @@ Sirva quente, com sal e pimenta adicionais, se necessário.</li>
 <hr>
 
 
-<div>
+<div class=" informacoes">
 <h2>Informações nutricionais</h2>
 
 <p>A tabela abaixo mostra os valores nutricionais por porção sem os recheios adicionais.</p>
