Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Sirva quente, com sal e pimenta adicionais, se necessário.</li>
 </tr>
 
 <tr>
-<td>Gordura</td>
+<th>Gordura</th>
 <td>22g</td>
 </tr>
 
