--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <h2>Tempo de preparo</h2>
 
 <ul>
-<li><strong>Total:</strong>Aproximadamente 10 minutos</li>
+<li><strong>Total:</strong> Aproximadamente 10 minutos</li>
 
-<li><strong>Preparo:</strong>5 minutos</li>
+<li><strong>Preparo:</strong> 5 minutos</li>
 
-<li><strong>Cozimento:</strong>5 minutos</li>
+<li><strong>Cozimento:</strong> 5 minutos</li>
 </ul>
 
         </div>
@@ -35,7 +35,7 @@
 <li>Sal, a gosto</li>
 <li>Pimenta, a gosto</li>
 <li>1 colher de sopa de manteiga ou óleo</li>
-<li>Recheios opcionais: queijo, legumes picados, carnes cozidas, ervas.</li>
+<li>Recheios opcionais: queijo, legumes picados, carnes cozidas e ervas.</li>
  </ul>
 </div>
 
@@ -67,7 +67,7 @@ Sirva quente, com sal e pimenta adicionais, se necessário.</li>
 <hr>
 
 
-<div class=" informacoes">
+<div class="Informacoes">
 <h2>Informações nutricionais</h2>
 
 <p>A tabela abaixo mostra os valores nutricionais por porção sem os recheios adicionais.</p>
@@ -94,11 +94,6 @@ Sirva quente, com sal e pimenta adicionais, se necessário.</li>
 </tr>
 
 </table>
-
-
-
-
-
 
 </div>
 
